<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardRoundedCorner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/departurereturndate_departure_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_departure"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_h4" />

        <TextView
            android:id="@+id/departurereturndate_departure_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/date_select"
            android:textColor="@color/medium_dark_grey"
            android:textSize="@dimen/text_size_h3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/departurereturndate_return_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_return"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_h4" />

        <TextView
            android:id="@+id/departurereturndate_return_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/date_select"
            android:textColor="@color/medium_dark_grey"
            android:textSize="@dimen/text_size_h3" />
    </LinearLayout>
</LinearLayout>
