<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Cabin Class Selection -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/passenger_cabin_class_selection_cabin_class_title"
        android:textColor="@color/text_gold"
        android:textSize="@dimen/text_size_h2" />

    <RadioGroup
        android:id="@+id/radioGroupCabin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioEconomy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cabin_class_economy"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_h3" />

        <RadioButton
            android:id="@+id/radioPremiumEconomy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabin_class_premium_economy"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_h3" />

        <RadioButton
            android:id="@+id/radioBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabin_class_business"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_h3" />

        <RadioButton
            android:id="@+id/radioFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabin_class_first_suites"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_h3" />
    </RadioGroup>

    <!-- Passengers Selection -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/passenger_cabin_class_selection_passenger_title"
        android:textColor="@color/text_gold"
        android:textSize="@dimen/text_size_h2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Adult Count -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/dp_15">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Adult (+12 years old)"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_h3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMinusAdult"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_stepper_minus_selector"
                android:enabled="false" />

            <TextView
                android:id="@+id/txtAdultCount"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/proxima_nova_semibold"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/text_blue"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlusAdult"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/button_stepper_plus_selector" />
        </LinearLayout>

        <!-- Child Count -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/dp_15">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Child (2-11 years old)"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_h3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMinusChild"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_stepper_minus_selector"
                android:enabled="false" />

            <TextView
                android:id="@+id/txtChildCount"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/proxima_nova_semibold"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/text_blue"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlusChild"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/button_stepper_plus_selector" />
        </LinearLayout>

        <!-- Infant Count -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/dp_15">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Infant (0-23 months)"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_h3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMinusInfant"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_stepper_minus_selector"
                android:enabled="false" />

            <TextView
                android:id="@+id/txtInfantCount"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:enabled="false"
                android:fontFamily="@font/proxima_nova_semibold"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/text_blue"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlusInfant"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/button_stepper_plus_selector" />
        </LinearLayout>
    </LinearLayout>

    <!-- Done Button -->
    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/done" />
</LinearLayout>
