<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_10">

    <EditText
        android:id="@+id/promptEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="@font/prompt"
        android:gravity="start"
        android:hint="@string/enter_your_prompt"
        android:minHeight="100dp"
        android:padding="@dimen/dp_10"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_size_h4"
        app:layout_constraintEnd_toStartOf="@id/buttonGenerate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/buttonGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/generate"
        android:textSize="@dimen/text_size_h6"
        app:layout_constraintBottom_toTopOf="@id/buttonClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/promptEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/charcoalGrey"
        android:text="@string/clear"
        android:textSize="@dimen/text_size_h6"
        app:layout_constraintBottom_toBottomOf="@id/promptEditText"
        app:layout_constraintEnd_toEndOf="@id/buttonGenerate"
        app:layout_constraintStart_toStartOf="@id/buttonGenerate"
        app:layout_constraintTop_toBottomOf="@id/buttonGenerate" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageCardView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/dp_10"
        android:visibility="gone"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/promptEditText">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/imageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/dp_10"
            android:fontFamily="@font/proxima_nova_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_h2"
            tools:text="Singapore"
            tools:textColor="@color/text_black" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tripList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_15"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCardView" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieLoader"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/dp_20"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/promptEditText"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/gemeni_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>