<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardRoundedCorner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/odselector_origin_empty_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_flight_city_from"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_size_h4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:paddingTop="10dp"
                android:text="@string/departure_city"
                android:textAlignment="center"
                android:textColor="@color/medium_dark_grey"
                android:textSize="@dimen/text_size_h4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/odselector_origin_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_flight_city_from"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_size_h4" />

            <TextView
                android:id="@+id/odselector_origin_airport_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_bold"
                android:textColor="@color/text_blue"
                android:textSize="36sp"
                tools:text="SIN" />

            <TextView
                android:id="@+id/odselector_origin_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/text_size_h3"
                tools:text="Singapore" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/odselector_destination_empty_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_flight_city_to"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_size_h4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:paddingTop="10dp"
                android:text="@string/arrival_city"
                android:textAlignment="center"
                android:textColor="@color/medium_dark_grey"
                android:textSize="@dimen/text_size_h4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/odselector_destination_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_flight_city_to"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_size_h4" />

            <TextView
                android:id="@+id/odselector_destination_airport_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_bold"
                android:textColor="@color/text_blue"
                android:textSize="36sp"
                tools:text="ARN" />

            <TextView
                android:id="@+id/odselector_destination_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/text_size_h3"
                tools:text="Stockholm" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/odselector_swap_icon_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/odselector_swap_icon_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_od_swap_arrows_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/odselector_swap_icon_arrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_od_swap_arrows"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/odselector_plane_image_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="center"
        android:src="@drawable/ic_plane_gold"
        android:visibility="visible" />

</FrameLayout>
